--- a/PrintFP/PrintFP.csproj
+++ b/PrintFP/PrintFP.csproj
@@ -112,6 +112,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="StopwatchHelper.cs" />
+    <Compile Include="UpdateStatusFP.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
